--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.HUGO_SITE}}
-          external_repository: codeworkshops/hugo-prez.github.io
-          #publish_dir: ./public
+          # external_repository: codeworkshops/hugo-prez.github.io
+          # publish_dir: ./public
           #   keep_files: true
           user_name: codeworkshops 
           user_email: info@codeworkshops.com
