--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           personal_token: ${{ secrets.HUGO_SITE}}
           # external_repository: codeworkshops/hugo-prez.github.io
-          # publish_dir: ./public
+          publish_dir: ./public
           keep_files: true
           user_name: codeworkshops 
           user_email: info@codeworkshops.com
